add cs details api endpoint, add heartbeat to gateway
